--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,7 @@ h2 {
     line-height: 55px;
     text-transform: uppercase;
     opacity: 0.8;
+    margin: 0;
 }
 
 p {
@@ -618,11 +619,14 @@ h3 {
     max-width: 411px;
 }
 
-.feedback {
-    /* column-gap: 107px; */
-    /* grid-column: 2 / 3; */
-    /* grid-row: 1 / 3; */
+.contacts-decor {
+    min-height: 481px;
+    position: relative;
+    flex: 1 1 auto;
+    background-color: #2c2c2c;
+    overflow:hidden;
 }
+
 
 .feedback-header {
     box-sizing: border-box;
@@ -750,15 +754,6 @@ h3 {
     margin-bottom: 17px;
 }
 
-.feedback-left {
-    flex: 0 1 auto;
-
-}
-
-.contacts__decor {
-    background-color: #2c2c2c;
-}
-
 .feedback-contacts {
     display: flex;
     justify-content: center;
@@ -778,12 +773,17 @@ h3 {
 }
 
 .footer-contents {
+    flex-wrap: wrap;
+    justify-content: space-between;
+    max-width: 1249px;
+    margin: 0 auto;
+    padding-left: 1vw;
+    padding-right: 1vw;
     box-sizing: border-box;
     padding: 19px 0 0;
     color: #e0e0e0;
     display: flex;
     align-items: center;
-    justify-content: space-between;
     min-height: 110px;
     background-color: #2c2c2c;
 }
@@ -792,7 +792,7 @@ h3 {
     display: inline-block;
 }
 
-.footer-social-links > .footer__link:not(:last-child) {
+.footer-social-links > .footer-link:not(:last-child) {
     margin-right: 18px;
 }
 
